--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -64,9 +64,6 @@
     <Filter Include="sdk\vpklib">
       <UniqueIdentifier>{e7189077-ca26-4a4e-bb60-eec7e5a1bafc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sdk\bsplib">
-      <UniqueIdentifier>{8288ba1a-7609-42ef-af3b-850727635a99}</UniqueIdentifier>
-    </Filter>
     <Filter Include="sdk\tier1">
       <UniqueIdentifier>{da2c5c3d-eff4-404f-af3f-e30ec17dcc1a}</UniqueIdentifier>
     </Filter>
@@ -290,9 +287,6 @@
     </ClInclude>
     <ClInclude Include="..\mathlib\adler32.h">
       <Filter>sdk\mathlib</Filter>
-    </ClInclude>
-    <ClInclude Include="..\bsplib\bsplib.h">
-      <Filter>sdk\bsplib</Filter>
     </ClInclude>
     <ClInclude Include="..\common\pseudodefs.h">
       <Filter>sdk\common</Filter>
@@ -1137,6 +1131,9 @@
     <ClInclude Include="..\public\tier0\memdbgoff.h">
       <Filter>sdk\public\tier0</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\staticpropmgr.h">
+      <Filter>sdk\engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1204,9 +1201,6 @@
     </ClCompile>
     <ClCompile Include="..\vpklib\packedstore.cpp">
       <Filter>sdk\vpklib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\bsplib\bsplib.cpp">
-      <Filter>sdk\bsplib</Filter>
     </ClCompile>
     <ClCompile Include="..\mathlib\adler32.cpp">
       <Filter>sdk\mathlib</Filter>
@@ -1528,6 +1522,9 @@
     </ClCompile>
     <ClCompile Include="..\tier1\lzss.cpp">
       <Filter>sdk\tier1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\staticpropmgr.cpp">
+      <Filter>sdk\engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
