--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -54,6 +54,8 @@
     <ClCompile Include="..\engine\networkstringtable.cpp" />
     <ClCompile Include="..\engine\net_chan.cpp" />
     <ClCompile Include="..\engine\sdk_dll.cpp" />
+    <ClCompile Include="..\engine\shared\base_rcon.cpp" />
+    <ClCompile Include="..\engine\shared\shared_rcon.cpp" />
     <ClCompile Include="..\engine\staticpropmgr.cpp" />
     <ClCompile Include="..\engine\sys_dll.cpp" />
     <ClCompile Include="..\engine\sys_dll2.cpp" />
@@ -232,6 +234,8 @@
     <ClInclude Include="..\engine\net_chan.h" />
     <ClInclude Include="..\engine\packed_entity.h" />
     <ClInclude Include="..\engine\sdk_dll.h" />
+    <ClInclude Include="..\engine\shared\base_rcon.h" />
+    <ClInclude Include="..\engine\shared\shared_rcon.h" />
     <ClInclude Include="..\engine\staticpropmgr.h" />
     <ClInclude Include="..\engine\sys_dll.h" />
     <ClInclude Include="..\engine\sys_dll2.h" />
