--- a/r5dev/vproj/netconsole.vcxproj
+++ b/r5dev/vproj/netconsole.vcxproj
@@ -38,6 +38,8 @@
     </ClCompile>
     <ClCompile Include="..\core\termutil.cpp" />
     <ClCompile Include="..\engine\net.cpp" />
+    <ClCompile Include="..\engine\shared\base_rcon.cpp" />
+    <ClCompile Include="..\engine\shared\shared_rcon.cpp" />
     <ClCompile Include="..\netconsole\netconsole.cpp" />
     <ClCompile Include="..\netconsole\plat_time.cpp" />
     <ClCompile Include="..\protoc\cl_rcon.pb.cc">
@@ -67,6 +69,8 @@
     <ClInclude Include="..\core\stdafx.h" />
     <ClInclude Include="..\core\termutil.h" />
     <ClInclude Include="..\engine\net.h" />
+    <ClInclude Include="..\engine\shared\base_rcon.h" />
+    <ClInclude Include="..\engine\shared\shared_rcon.h" />
     <ClInclude Include="..\netconsole\netconsole.h" />
     <ClInclude Include="..\protoc\cl_rcon.pb.h" />
     <ClInclude Include="..\protoc\sv_rcon.pb.h" />
