Update state machine initialization order
* Run autoexec(_dev).cfg before anything else.
* Always initialize RCON (only gets ran if an actual password is set).
* Removed 'Cbuf_Execute()' call from 'CHostState::LoadConfig', let it run in the frame loop instead.
* Removed hardcoded set call for 'net_usesocketsforloopback', will be set in autoexec from now on.

--- a/r5dev/resource/cfg/autoexec.cfg
+++ b/r5dev/resource/cfg/autoexec.cfg
@@ -2,3 +2,4 @@
 //// REPLICATED       ////
 //////////////////////////
 mp_allowed                   "1" // Whether multiplayer is allowed or not.
+net_usesocketsforloopback    "1" // Whether to use network sockets layer for packets.
